# Projets-diverses

./: README.md
Compilation/: .gitignore  README.md
Compilation/mini_ml/examples/correct/extended_syntax/: test_damn_woooooooow.mll
Compilation/mini_ml/language/: Parser.mly  ast.ml  ast.mli  interpreter.ml  interpreter.mli  typer.ml  typer_naive.ml  typer_util.ml
Compilation/mini_ml/util/: environment.ml
Compilation/rapport/: rapport.tex  rapport.toc
Compilation/rapport/chapters/: parser.tex  typage.tex
Data_test/: data_test_BIFORA (2) (1).xlsx  data_test_py.py  data_test_r.R  data_test_sas.sas  donnees_final.xlsx
Data_test/rapport/: rapport.tex
Data_test/rapport/chapters/: analyse.tex  import.tex
Jeu Mosaic/: .gitignore  CMakeLists.txt  README.md  default.txt  game.c  game_aux.c  game_ext.c  game_ext.h  game_random.c  game_random.h  game_sdl.c  game_sdl.h  game_solve.c  game_struct.h  game_test_lindrano.c  game_test_werobert.c  game_text.c  game_tools.c  game_tools.h  main.c  queue.c  queue.h  solution.txt
Jeu Mosaic/Testing/Temporary/: CTestCostData.txt
Jeu Mosaic/make-game-web/make-game-web/: demo.js  game.html
Jeu Mosaic/make-game-web/make-game-web/src/: game_tools.c  game_tools.h
NDI 2023/: .gitignore  README.md  package-lock.json  server.js
NDI 2023/public/: index.html  quiz.html  styles.css  template.html
NDI 2023/server_files/: server-cert.pem  server-key.pem
NDI 2024/: README.md  next.config.ts  package-lock.json  package.json
NDI 2024/app/: page.tsx
NDI 2024/app/3D/: page.tsx
NDI 2024/app/api/get-users/: route.ts
NDI 2024/app/api/groupes/: route.ts
NDI 2024/app/api/login/: route.ts
NDI 2024/app/api/salles/: route.ts
NDI 2024/app/api/save-user/: route.ts
NDI 2024/app/connexion/: page.tsx
NDI 2024/app/home/: acceuil.css  page.tsx
NDI 2024/app/inscription/: page.tsx
NDI 2024/app/salles/: page.tsx
NDI 2024/components/3d/: ThreeScene.tsx  corps.tsx
NDI 2024/components/connexion/: connexion.tsx
NDI 2024/components/inscription/: inscription-form.tsx
NDI 2024/components/messenger-group/: messenger-groups.tsx
NDI 2024/components/navbar/: navbar.tsx
NDI 2024/data/: salles.json  users.json
ProgSys/: ex.txt  mytail.c  reverse  reverse.c
ProgSys/projet shell/: Evaluation.c  Makefile  Shell.c
Projet développement logiciel/: .gitlab-ci.yml  README.md  log_mvn.txt  package-lock.json  package.json
Projet développement logiciel/analyze/: analyze_service.py
Projet développement logiciel/backend/: pom.xml
Projet développement logiciel/backend/src/main/java/pdl/backend/: BackendApplication.java  IAClient.java  ImageStartupProcessor.java  RedirectConfiguration.java
Projet développement logiciel/backend/src/main/resources/: application.properties
Projet développement logiciel/backend/src/main/resources/public/: index.html
Projet développement logiciel/backend/src/main/resources/public/static/: Gallery-ANTb1K8m.js  Gallery-BdogIOwl.js  Gallery-Bdp0nQ-0.css  Gallery-C2hM15WL.css  Gallery-ClY-HCUh.js  Gallery-DgDg_P4s.js  Gallery-DjrYpEIT.css  Gallery-N4RpANAk.js  Gallery-k925IsyO.js  Gallery-lKae-0gd.js  Home-Dp0f3eyt.js  Home-PO7r-tV-.js  Image-B83ZOqVM.css  Image-B88HVeg-.js  Image-CNphhPJm.js  Image-CfRZl-Er.js  Image-CguhqQDZ.js  Image-CpFbd2gV.js  Image-D0Dso7mK.js  Image-Gq5-nTLC.js  Image.vue_vue_type_script_setup_true_lang-Dk6G-SGb.js  Upload-B2FsZv8E.js  (+36 more)
Projet développement logiciel/frontend/: package-lock.json  package.json  vite.config.ts
Projet développement logiciel/frontend/src/: App.vue  http-api.ts  router.ts
Projet développement logiciel/frontend/src/components/: Bar.vue  Details.vue  Gallery.vue  View.vue
Projet développement logiciel/frontend/src/components/other/: Image.vue  Upload.vue
(+32 files in other folders)
